[package]
name = "tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.21"
regex = "1.8.1"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
env_logger = "0.10"
chrono = "0.4"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
